--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -14,88 +14,178 @@ body {
 }
 
 :root {
-    --green: #260976;
+    --purple: #260976;
 }
 
 /* Header styling */
 nav {
-    background-color: var(--green);
-    padding: 5px;
+    background-color: var(--purple);
+    height: 8vh;
+    padding: 5px 150px;
 }
 
 nav ul {
     display: flex;
-    justify-content: left;
-    height: 7vh;
+    justify-content: right;
 }
 
 nav img {
-    height: 100%;
-    margin-right: 50px;
+    float: left;
+    height:7vh;
 }
 
-nav ul li {
+#menu li {
     list-style: none;
     text-transform: uppercase;   
-    padding: 0px 70px;
+    padding: 0px 20px;
 }
 
-nav ul li a {
+nav li a {
+    font-family: 'Bubblegum Sans', cursive;
+    line-height: 85px;
+    font-size: .8rem;
     color: white;
-    font-family: sans-serif;
-    font-size: 1.5rem;
-    font-weight: bold;
-    line-height: 70px;
 }
 
-nav ul li:hover {
+#menu li:hover {
     opacity: 0.9;
     cursor: pointer;
 }
 
 .active {
-    border-bottom: white solid 2px;
-    
+    color: yellow;
+}
+
+/* Menu-icon styling */
+#menu-icon {
+    display:none;
+    float: right;
+    margin: 11px 30px 0px 0px;
+}
+
+@media only screen and (max-width: 1025px){
+    nav {
+        padding: 5px 50px;
+    }
+
+    #menu li a {
+        font-size: .7rem;
+    } 
+}
+
+@media only screen and (max-width: 1025px){
+    nav {
+        padding: 5px 30px;
+    }
+
+    #menu li a {
+        font-size: .6rem;
+    } 
+}
+
+@media only screen and (max-width: 685px){
+    #menu {
+        display: none;
+    }  
+
+    #menu-icon {
+        display: block;
+    }
+}
+
+/* Dropdown menu styling */
+#dropdown-menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    height: 70vh;
+    width: 80%;
+    left: 10%;
+    top: 8vh;
+    background-color: white;
+    box-shadow: 2px 2px 5px black;
+    padding: 20px;
+    list-style: none;
+}
+
+#dropdown-menu li {
+    display: block;
+    width: 100%;
+    padding: 5px 0px;
+    border-bottom: solid 1px var(--purple);
+
+}
+
+#dropdown-menu li a {
+   color: var(--purple);
+   font-size: 1rem;
+   font-weight: bold;
+}
+
+.close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    font-size: 2rem;
+}
+
+.close:hover, #dropdown-menu li a:hover {
+    opacity: .7;
+    cursor: pointer;
+}
+
+
+.menu-svg:hover {
+    opacity: .8;
+    cursor: pointer;
 }
 
 /*  Main content styling */
 section {
-    margin-top: 10vh;
     text-align: center;
+    margin-top: 50px;
 }
 
+section h1{
+    margin-top: 20vh;
+    font-family: 'Bubblegum Sans', cursive;
+    color: var(--purple);
+}
+
+
+/*  Quiz content styling */
 #questions-flex {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+    width: 100%;
 }
 
 .question {
     flex-basis: 30%;
-    background-color: var(--green);
-    min-height: 200px;
-    margin: 10px 50px;
-    padding: 70px 30px;
+    background-color: var(--purple);
+    min-height: 150px;
     border-radius: 5px;
+    padding: 60px 10px;
     color: white;
     font-weight: bold;
     box-shadow: 2px 2px 5px rgb(0, 0, 0);
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .answer1, .answer2 {
-    flex-basis: 25%;
+    flex-basis: 20%;
 }
 
 .answer1 p, .answer2 p {
-    padding: 20px;
+    padding: 15px;
     background-color: white;
     border-radius: 5px;
-    color: var(--green);
+    color: var(--purple);
     font-weight: bold;
     box-shadow: 2px 2px 5px rgb(0, 0, 0);
-    text-transform: uppercase;
-    margin-top: 50px;
+    text-transform: capitalize;
 }
 
 .answer1 span, .answer2 span{
@@ -117,7 +207,8 @@ section {
 
 .restart-quiz button {
     padding: 20px;
-    background-color: var(--green);
+    background-color: var(--purple);
+    font-family: 'Bubblegum Sans', cursive;
     border-radius: 5px;
     color: white;
     font-weight: bold;
@@ -131,6 +222,22 @@ section {
     cursor: pointer;
 }
 
+@media only screen and (max-width: 685px){
+    #questions-flex {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .question {
+        width: 75%;
+    }
+    
+    .answer1, .answer2 {
+        width: 75%;
+    }
+}
+
+/* Show results styling */
 #show-circus-character {
     padding: 0px 50px;
     text-align: center;
@@ -142,16 +249,15 @@ section {
 }
 
 #show-circus-character #score {
-    padding-top: 15px;
     text-transform: uppercase;
     font-size: 2rem;
     font-weight: bold;
-    color: var(--green);
+    color: var(--purple);
 }
 
 #show-circus-character button {
     padding: 20px;
-    background-color: var(--green);
+    background-color: var(--purple);
     border-radius: 5px;
     color: white;
     font-weight: bold;
@@ -176,12 +282,11 @@ section {
     display: inline;
 }
 
-
 /* Footer styling */
 footer {
-    background-color: var(--green);
+    background-color: var(--purple);
+    font-family: 'Bubblegum Sans', cursive;
     color: white;
-    font-weight: bold;
     width: 100vw;
     text-align: center;
     min-height: 50px;
