--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -27,11 +27,11 @@
             <!-- Image -->
             <img id="circus-img" src="" alt="Circus Character">
             <ul>
-                <li id="score"></li>
-                <li id="a1"></li>
-                <li id="a2"></li>
-                <li id="a3"></li>
-                <li id="a4"></li>
+                <li id="score"></li><br>
+                <li id="a1"></li><br>
+                <li id="a2"></li><br>
+                <li id="a3"></li><br>
+                <li id="a4"></li><br>
                 <li id="a5"></li>
             </ul>
         </div>
