converts home & about section into a single page.

--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>VitaFun</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
+      <!-- Image -->
+      <a href="/"><img src="img/vitafun-logo.png" alt="Logo" /></a>
+      <ul id="menu">
+        <!-- Link to home -->
+        <li class="link home"><a href="/">home</a></li>
 
-        <!-- Image -->
-        <a href="/"><img src="img/vitafun-logo.png" alt="Logo"></a>
-        <ul id="menu">
-            <!-- Link to home -->
-            <li class="link home"><a href="/">home</a></li>
+        <!-- Link to about -->
+        <li class="link about"><a href="#about">about</a></li>
 
-            <!-- Link to about -->
-            <li class="link about "><a href="/about">about</a></li>
+        <!-- Link to quiz -->
+        <li class="link quiz"><a href="/quiz">quiz</a></li>
 
-            <!-- Link to quiz -->
-            <li class="link quiz"><a href="/quiz">quiz</a></li>
+        <!-- Link to superfood circus -->
+        <li class="link superfood-circus">
+          <a href="/superfoodcircus">superfood circus</a>
+        </li>
 
-            <!-- Link to superfood circus -->
-            <li class="link superfood-circus"><a href="/superfoodcircus">superfood circus</a></li>
+        <!-- Link to recipes -->
+        <li class="link recipes"><a href="/recipes">recipes</a></li>
 
-            <!-- Link to recipes -->
-            <li class="link recipes"><a href="/recipes">recipes</a></li>
+        <!-- Link to vitafresh -->
+        <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
+      </ul>
 
-            <!-- Link to vitafresh -->
-            <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
-        </ul>
+      <ul id="dropdown-menu">
+        <div class="close" onclick="closeMenu()">X</div>
+        <!-- Link to home -->
+        <li class="link home"><a href="/">home</a></li>
 
-        <ul id="dropdown-menu">
+        <!-- Link to about -->
+        <li class="link about"><a href="/about">about</a></li>
 
-            <div class="close" onclick="closeMenu()">X</div>
-            <!-- Link to home -->
-            <li class="link home"><a href="/">home</a></li>
+        <!-- Link to quiz -->
+        <li class="link quiz"><a href="/quiz">quiz</a></li>
 
-            <!-- Link to about -->
-            <li class="link about "><a href="/about">about</a></li>
+        <!-- Link to superfood circus -->
+        <li class="link superfood-circus">
+          <a href="/superfoodcircus">superfood circus</a>
+        </li>
 
-            <!-- Link to quiz -->
-            <li class="link quiz"><a href="/quiz">quiz</a></li>
+        <!-- Link to recipes -->
+        <li class="link recipes"><a href="/recipes">recipes</a></li>
 
-            <!-- Link to superfood circus -->
-            <li class="link superfood-circus"><a href="/superfoodcircus">superfood circus</a></li>
+        <!-- Link to vitafresh -->
+        <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
+      </ul>
 
-            <!-- Link to recipes -->
-            <li class="link recipes"><a href="/recipes">recipes</a></li>
-
-            <!-- Link to vitafresh -->
-            <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
-        </ul>
-
-        <!-- Menu icon -->
-        <div id="menu-icon" onclick="openMenu()">
-            <svg class="menu-svg" viewBox="0 0 100 80" width="40" height="40">
-                <rect width="100" height="13" fill="white"></rect>
-                <rect y="30" width="100" height="13" fill="white"></rect>
-                <rect y="60" width="100" height="13" fill="white"></rect>
-            </svg>
-        </div>
-        
+      <!-- Menu icon -->
+      <div id="menu-icon" onclick="openMenu()">
+        <svg class="menu-svg" viewBox="0 0 100 80" width="40" height="40">
+          <rect width="100" height="13" fill="white"></rect>
+          <rect y="30" width="100" height="13" fill="white"></rect>
+          <rect y="60" width="100" height="13" fill="white"></rect>
+        </svg>
+      </div>
     </nav>
