--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -1,11 +1,12 @@
-<%- include('components/header') %> 
+<%- include('components/header') %>
+<div class="page-content">
+  <section>
+    <!-- text with text passed through function -->
+    <h1>HOME</h1>
+  </section>
+  <section id="about">
+    <h1>ABOUT</h1>
+  </section>
+</div>
 
-    <section>
-        
-        <!-- text with text passed through function -->
-        <h1>HOME</h1> 
-
-    </section>
- 
- <%- include('components/footer') %> 
-
+<%- include('components/footer') %>
