adds page-content class for fixing footer position

--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -1,41 +1,52 @@
-<%- include('components/header') %> 
-
-    <!-- Questions and answers  -->
-    <div class="question-wrapper">
-        <section id="questions-flex">
-            
-            <div class="answer1">
-                <p id="answer-left" onclick="loadQuestions(), addAnswerToList('answer-left'), calculateQuizScore()"></p>
-            </div>
-            <div class="question">
-                <p id="question"></p>
-            </div>
-            <div class="answer2">
-                <p id="answer-right" onclick="loadQuestions(), addAnswerToList('answer-right'), calculateQuizScore()"></p>
-            </div>   
-        </section>
-
-        <!-- Restart button -->
-        <div class="restart-quiz">
-            <a href="/quiz"><button>restart quiz</button></a> 
-        </div>
-    </div>
-        
-    <!-- Display list of answers -->
-    <section id="show-circus-character">
-        <div class="list-wrapper">
-            <!-- Image -->
-            <img id="circus-img" src="" alt="Circus Character">
-            <ul>
-                <li id="score"></li><br>
-                <li id="a1"></li><br>
-                <li id="a2"></li><br>
-                <li id="a3"></li><br>
-                <li id="a4"></li><br>
-                <li id="a5"></li>
-            </ul>
-        </div>
-        <a href="/quiz"><button>Close window</button></a> 
+<%- include('components/header') %>
+<div class="page-content">
+  <!-- Questions and answers  -->
+  <div class="question-wrapper">
+    <section id="questions-flex">
+      <div class="answer1">
+        <p
+          id="answer-left"
+          onclick="loadQuestions(), addAnswerToList('answer-left'), calculateQuizScore()"
+        ></p>
+      </div>
+      <div class="question">
+        <p id="question"></p>
+      </div>
+      <div class="answer2">
+        <p
+          id="answer-right"
+          onclick="loadQuestions(), addAnswerToList('answer-right'), calculateQuizScore()"
+        ></p>
+      </div>
     </section>
-    
-<%- include('components/footer') %> 
+
+    <!-- Restart button -->
+    <div class="restart-quiz">
+      <a href="/quiz"><button>restart quiz</button></a>
+    </div>
+  </div>
+
+  <!-- Display list of answers -->
+  <section id="show-circus-character">
+    <div class="list-wrapper">
+      <!-- Image -->
+      <img id="circus-img" src="" alt="Circus Character" />
+      <ul>
+        <li id="score"></li>
+        <br />
+        <li id="a1"></li>
+        <br />
+        <li id="a2"></li>
+        <br />
+        <li id="a3"></li>
+        <br />
+        <li id="a4"></li>
+        <br />
+        <li id="a5"></li>
+      </ul>
+    </div>
+    <a href="/quiz"><button>Close window</button></a>
+  </section>
+</div>
+
+<%- include('components/footer') %>
