--- a/frontend/views/vitafresh.ejs
+++ b/frontend/views/vitafresh.ejs
@@ -1,7 +1,8 @@
-<%- include('components/header') %> 
-    
-    <section>
-        <h1>VITAFRESH</h1>
-    </section>
+<%- include('components/header') %>
+<div class="page-content">
+  <section>
+    <h1>VITAFRESH</h1>
+  </section>
+</div>
 
-<%- include('components/footer') %> 
+<%- include('components/footer') %>
