--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -20,7 +20,6 @@ body {
 
 /* Headings */
 h1 {
-  margin-top: 20vh;
   font-family: var(--heading-font-family);
   font-size: 2em;
 }
@@ -142,6 +141,7 @@ nav li a {
 .close {
   position: absolute;
   right: 20px;
+  color: #000;
   top: 20px;
   font-size: 2rem;
 }
@@ -160,6 +160,7 @@ nav li a {
 /*  Main content styling */
 .page-content {
   min-height: 100vh;
+  padding-top: 80px;
 }
 
 section {
