fixes 'about' link in navbar and other html errors

--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -17,7 +17,7 @@
         <li class="link home"><a href="/">home</a></li>
 
         <!-- Link to about -->
-        <li class="link about"><a href="#about">about</a></li>
+        <li class="link about"><a href="/#about">about</a></li>
 
         <!-- Link to quiz -->
         <li class="link quiz"><a href="/quiz">quiz</a></li>
@@ -40,7 +40,7 @@
         <li class="link home"><a href="/">home</a></li>
 
         <!-- Link to about -->
-        <li class="link about"><a href="/about">about</a></li>
+        <li class="link about"><a href="/#about">about</a></li>
 
         <!-- Link to quiz -->
         <li class="link quiz"><a href="/quiz">quiz</a></li>
@@ -66,3 +66,4 @@
         </svg>
       </div>
     </nav>
+
