--- a/frontend/views/components/footer.ejs
+++ b/frontend/views/components/footer.ejs
@@ -1,4 +1,4 @@
-<footer><p>&copy 2022 The Red Team</p></footer>
+<footer><p>&copy;2022 The Red Team</p></footer>
 
 <script src="js/main.js"></script>
 </body>
