--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -33,6 +33,7 @@ h2 {
 a {
   text-transform: uppercase;
   text-decoration: none;
+  color: white;
 }
 
 a:hover {
@@ -88,20 +89,51 @@ nav li a {
 #menu-icon {
   display: none;
   float: right;
-  margin: 11px 30px 0px 0px;
+  margin: 11px 0 0 0;
+}
+
+#menu-icon div {
+  background-color: var(--vita-yellow);
+  width: 38px;
+  height: 5px;
+  border-radius: 30px;
+  margin: 6px 0;
+}
+#menu-icon:hover {
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  transition: 0.6s;
+}
+
+#menu-icon.expanded .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+#menu-icon.expanded .bar2 {
+  opacity: 0;
+}
+
+#menu-icon.expanded .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+
+#dropdown-menu.expanded {
+  display: flex;
 }
 
 @media only screen and (max-width: 1025px) {
   nav {
     padding: 5px 50px;
   }
-
-  #menu li a {
-    font-size: 0.8em;
-  }
 }
 
-@media only screen and (max-width: 740px) {
+@media only screen and (max-width: 780px) {
   #menu {
     display: none;
   }
@@ -160,12 +192,11 @@ nav li a {
 /*  Main content styling */
 .page-content {
   min-height: 100vh;
-  padding-top: 80px;
+  padding-top: 100px;
 }
 
 section {
   text-align: center;
-  margin-top: 50px;
 }
 
 /* Footer styling */
