changes dropdown menu styles

--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -11,11 +11,16 @@ html {
 }
 
 body {
-  position: relative;
   color: var(--base-txt-color);
   font-family: var(--base-font-family);
   font-weight: 400;
   background: var(--background-blue);
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* Headings */
@@ -33,7 +38,7 @@ h2 {
 a {
   text-transform: uppercase;
   text-decoration: none;
-  color: white;
+  color: var(--base-txt-color);
 }
 
 a:hover {
@@ -60,25 +65,17 @@ nav ul {
 
 nav img {
   float: left;
-  height: auto;
-  width: 60px;
+  height: 66px;
+  width: auto;
 }
 
 #menu li {
-  list-style: none;
   padding: 0px 20px;
 }
 
 nav li a {
   font-family: var(--heading-font-family);
-  line-height: 85px;
-  font-size: 0.9em;
-  color: white;
-}
-
-#menu li:hover {
-  opacity: 0.9;
-  cursor: pointer;
+  line-height: 72px;
 }
 
 .active {
@@ -89,16 +86,19 @@ nav li a {
 #menu-icon {
   display: none;
   float: right;
-  margin: 11px 0 0 0;
+  margin: 15px 0 0 0;
+  position: relative;
+  z-index: 1000;
 }
 
 #menu-icon div {
-  background-color: var(--vita-yellow);
+  background-color: var(--vita-watermelon);
   width: 38px;
   height: 5px;
   border-radius: 30px;
   margin: 6px 0;
 }
+
 #menu-icon:hover {
   cursor: pointer;
 }
@@ -123,13 +123,13 @@ nav li a {
   transform: rotate(45deg) translate(-8px, -8px);
 }
 
-#dropdown-menu.expanded {
-  display: flex;
-}
-
 @media only screen and (max-width: 1025px) {
   nav {
     padding: 5px 50px;
+  }
+
+  nav li a {
+    font-size: 0.9em;
   }
 }
 
@@ -145,48 +145,49 @@ nav li a {
 
 /* Dropdown menu styling */
 #dropdown-menu {
-  display: none;
+  display: flex;
   flex-direction: column;
-  position: absolute;
-  width: 80%;
-  left: 10%;
-  top: 8vh;
-  background-color: white;
   box-shadow: var(--base-box-shadow);
   padding: 20px;
-  list-style: none;
+  background-color: #ffffff;
+  border-radius: 20px;
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  width: 300px;
+  overflow: hidden;
+  max-height: 0;
+  visibility: hidden;
+  transition: all 0.4s ease-in-out;
+}
+
+#dropdown-menu hr {
+  border: none;
+  border-top: solid 1px #dddddd;
 }
 
 #dropdown-menu li {
-  display: block;
-  width: 100%;
-  padding: 5px 0px;
-  border-bottom: solid 1px var(--background-blue);
+  text-align: center;
 }
 
 #dropdown-menu li a {
+  font-size: 1em;
   color: var(--background-blue);
-  font-size: 1rem;
-  font-weight: bold;
+  line-height: 50px;
 }
 
-.close {
-  position: absolute;
-  right: 20px;
-  color: #000;
-  top: 20px;
-  font-size: 2rem;
+#dropdown-menu.expanded {
+  max-height: 500px;
+  visibility: visible;
 }
 
-.close:hover,
-#dropdown-menu li a:hover {
-  opacity: 0.7;
-  cursor: pointer;
-}
-
-.menu-svg:hover {
-  opacity: 0.8;
-  cursor: pointer;
+@media only screen and (max-width: 350px) {
+  #dropdown-menu {
+    width: 100%;
+    top: 0;
+    right: 0;
+    border-radius: 0;
+  }
 }
 
 /*  Main content styling */
