--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -14,17 +14,24 @@
       <a href="/"><img src="img/vitafun-logo.png" alt="Logo" /></a>
       <ul id="menu">
         <!-- Link to home -->
-        <li class="link home"><a href="/">home</a></li>
+        <li class="link home">
+          <a href="/">home</a>
+        </li>
+
         <!-- Link to about -->
         <li class="link about"><a href="/#about">about</a></li>
+
         <!-- Link to quiz -->
         <li class="link quiz"><a href="/quiz">quiz</a></li>
+
         <!-- Link to superfood circus -->
         <li class="link superfood-circus">
           <a href="/superfoodcircus">superfood circus</a>
         </li>
+
         <!-- Link to recipes -->
         <li class="link recipes"><a href="/recipes">recipes</a></li>
+
         <!-- Link to vitafresh -->
         <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
       </ul>
@@ -40,16 +47,26 @@
         <ul id="dropdown-menu">
           <!-- Link to home -->
           <li class="link home"><a href="/">home</a></li>
+          <hr />
+
           <!-- Link to about -->
           <li class="link about"><a href="/#about">about</a></li>
+          <hr />
+
           <!-- Link to quiz -->
           <li class="link quiz"><a href="/quiz">quiz</a></li>
+          <hr />
+
           <!-- Link to superfood circus -->
           <li class="link superfood-circus">
             <a href="/superfoodcircus">superfood circus</a>
           </li>
+          <hr />
+
           <!-- Link to recipes -->
           <li class="link recipes"><a href="/recipes">recipes</a></li>
+          <hr />
+
           <!-- Link to vitafresh -->
           <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
         </ul>
