--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -2,7 +2,16 @@
 <div class="page-content">
   <section>
     <!-- text with text passed through function -->
-    <h1>HOME</h1>
+    <h1>VitaFun Fresh fun hub for VitaFresh kids</h1>
+    <p>
+      Are you a ... tightrope walker? A magician? Perhaps you are an acrobat or
+      even a strong boy or girl? Take the quiz to find out what circus character
+      suits you and what superfoods these amazing superhumans eat!
+    </p>
+    <a class="primary-btn"
+      >Take The Quiz!
+      <div class="arrow-box"><span class="arrow">👉🏻</span></div></a
+    >
   </section>
   <section id="about">
     <h1>ABOUT</h1>
