--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -136,6 +136,15 @@ a:hover {
 }
 
 /* Header styling */
+.hangings {
+  position: fixed;
+  top: 70px;
+  left: 50px;
+  width: 300px;
+  height: auto;
+  z-index: 3;
+}
+
 nav {
   height: 80px;
   padding: 5px 150px;
@@ -290,13 +299,43 @@ section {
   padding-top: 100px;
 }
 
-.hangings {
-  position: fixed;
-  top: 70px;
-  left: 50px;
-  width: 300px;
-  height: auto;
-  z-index: 3;
+/*  glowing circles styling */
+.circle-gradient {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 0.6;
+  position: absolute;
+}
+
+.circle-gradient.purple {
+  background: var(--vita-purple);
+  box-shadow: 0 0 60px 30px var(--vita-purple),
+    0 0 100px 60px var(--vita-purple), 0 0 140px 90px var(--background-blue);
+}
+
+.circle-gradient.green {
+  background: var(--vita-green);
+  box-shadow: 0 0 60px 30px var(--vita-green), 0 0 100px 60px var(--vita-green),
+    0 0 140px 90px var(--background-blue);
+}
+
+.circle-gradient.yellow {
+  background: var(--vita-yellow);
+  box-shadow: 0 0 60px 30px var(--vita-yellow),
+    0 0 100px 60px var(--vita-yellow), 0 0 140px 90px var(--background-blue);
+}
+
+.circle-gradient.watermelon {
+  background: var(--vita-watermelon);
+  box-shadow: 0 0 60px 30px var(--vita-watermelon),
+    0 0 100px 60px var(--vita-watermelon), 0 0 140px 90px var(--background-blue);
+}
+
+.circle-gradient.blue {
+  background: var(--vita-blue);
+  box-shadow: 0 0 60px 30px var(--vita-blue), 0 0 100px 60px var(--vita-blue),
+    0 0 140px 90px var(--background-blue);
 }
 
 /* Footer styling */
