adds and styles content for homepage

--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Mulish:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap");
 @import "vars.css";
 @import "base.css";
+@import "home.css";
 @import "quiz.css";
 @import "recipes.css";
 @import "superfood.css";
