--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -1,17 +1,29 @@
 <%- include('components/header') %>
 <div class="page-content">
-  <section>
-    <!-- text with text passed through function -->
-    <h1>VitaFun Fresh fun hub for VitaFresh kids</h1>
-    <p>
-      Are you a ... tightrope walker? A magician? Perhaps you are an acrobat or
-      even a strong boy or girl? Take the quiz to find out what circus character
-      suits you and what superfoods these amazing superhumans eat!
-    </p>
-    <a class="primary-btn"
-      >Take The Quiz!
-      <div class="arrow-box"><span class="arrow">👉🏻</span></div></a
-    >
+  <section id="home">
+    <div class="item1">
+      <h1>VitaFun Fresh Fun Hub For VitaFresh Kids</h1>
+      <p>
+        Are you a ... tightrope walker? A magician? Perhaps you are an acrobat
+        or even a strong boy or girl? Take the quiz to find out what circus
+        character suits you and what superfoods these amazing superhumans eat!
+      </p>
+      <div>
+        <a class="primary-btn"
+          >Take The Quiz!
+          <div class="arrow-box"><span class="arrow">👉🏼</span></div></a
+        >
+      </div>
+    </div>
+
+    <div class="img-container item2">
+      <div class="circle-gradient watermelon"></div>
+      <img src="../public/img/acrobat.png" alt="" class="acrobat" />
+    </div>
+    <div class="img-container item3">
+      <div class="circle-gradient yellow"></div>
+      <img src="../public/img/clown-juggling-fruits.png" alt="" class="clown" />
+    </div>
   </section>
   <section id="about">
     <h1>ABOUT</h1>
