--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-right: 50px;
 }
 
 .item2 {
@@ -42,24 +43,62 @@
 
 #home .circle-gradient.watermelon {
   width: 200px;
-  height: 200px;
 }
 
 #home .circle-gradient.yellow {
-  width: 300px;
-  height: 300px;
+  width: 250px;
 }
 
 #home .clown {
-  height: 370px;
+  height: 320px;
   width: auto;
   position: absolute;
+  top: -30%;
 }
 
 #home .acrobat {
-  max-height: 300px;
+  height: 300px;
   width: auto;
   position: absolute;
+  left: 10%;
+}
+
+@media only screen and (min-width: 1200px) and (min-height: 800px) {
+  #home .circle-gradient.watermelon {
+    width: 300px;
+  }
+
+  #home .circle-gradient.yellow {
+    width: 350px;
+  }
+
+  #home .clown {
+    height: 420px;
+    top: -20%;
+  }
+
+  #home .acrobat {
+    height: 400px;
+  }
+}
+
+@media only screen and (min-width: 1500px) and (min-height: 900px) {
+  #home .circle-gradient.watermelon {
+    width: 400px;
+  }
+
+  #home .circle-gradient.yellow {
+    width: 450px;
+  }
+
+  #home .clown {
+    height: 460px;
+    top: -20%;
+  }
+
+  #home .acrobat {
+    height: 420px;
+  }
 }
 
 /*  About section */
